[gd_scene load_steps=4 format=2]

[ext_resource path="res://UI/Button4.gd" type="Script" id=1]
[ext_resource path="res://UI/Logo.png" type="Texture" id=2]
[ext_resource path="res://UI/ButtonTheme.tres" type="Theme" id=3]

[node name="Control" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 1300
custom_constants/margin_left = 120

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 120.0
margin_right = 632.0
margin_bottom = 1080.0
custom_constants/margin_right = 50
custom_constants/margin_left = 50

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer"]
margin_left = 50.0
margin_right = 462.0
margin_bottom = 1080.0
custom_constants/margin_top = 512

[node name="ColorRect" type="ColorRect" parent="MarginContainer/MarginContainer"]
modulate = Color( 1, 1, 1, 0.121569 )
margin_top = 512.0
margin_right = 412.0
margin_bottom = 1080.0
color = Color( 0, 0, 0, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/MarginContainer"]
margin_top = 512.0
margin_right = 412.0
margin_bottom = 1080.0
theme = ExtResource( 3 )
custom_constants/separation = 20
alignment = 1
script = ExtResource( 1 )

[node name="Button" type="Button" parent="MarginContainer/MarginContainer/VBoxContainer"]
margin_top = 178.0
margin_right = 412.0
margin_bottom = 216.0
text = "Play"

[node name="Button2" type="Button" parent="MarginContainer/MarginContainer/VBoxContainer"]
margin_top = 236.0
margin_right = 412.0
margin_bottom = 274.0
text = "Options"

[node name="Button3" type="Button" parent="MarginContainer/MarginContainer/VBoxContainer"]
margin_top = 294.0
margin_right = 412.0
margin_bottom = 332.0
text = "Info"

[node name="Button4" type="Button" parent="MarginContainer/MarginContainer/VBoxContainer"]
margin_top = 352.0
margin_right = 412.0
margin_bottom = 390.0
text = "Quit"

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 120.0
margin_right = 632.0
margin_bottom = 512.0
size_flags_vertical = 0
texture = ExtResource( 2 )
stretch_mode = 1

[connection signal="pressed" from="MarginContainer/MarginContainer/VBoxContainer/Button" to="MarginContainer/MarginContainer/VBoxContainer" method="_on_Button_pressed"]
[connection signal="pressed" from="MarginContainer/MarginContainer/VBoxContainer/Button4" to="MarginContainer/MarginContainer/VBoxContainer" method="_on_Button4_pressed"]
